--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
                 <h2 class="mb-12  lg:mb-0 font-semibold text-5xl  max-w-[550px] leading-[1.3]">Choose a plan that fits
                     your needs</h2>
     
-                    <div class=" w-fit lg:h-fit lg:self-end justify-evenly flex border  rounded-md bg-zinc-50 items-center p-1">
+                    <div class=" w-fit lg:h-fit lg:self-end hidden sm:flex border justify-evenly rounded-md bg-zinc-50 items-center p-1">
                         <span class="px-16"> <a href="#">Monthly</a></span>
                         <span class="rounded-lg bg-white py-2 px-8 flex gap-3 shadow-gray-300 shadow-md">
                             <a href="#" >Yearly</a>
